# aibackend

./: README.md
app/: db.py  llm.py  main.py  post_session.py  pyproject.toml  schema.sql  websocket.py
frontend/: index.html
